--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "pg": "^8.11.3",
     "socket.io": "^4.7.2"
   }
 }
